--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>VALORANT</h2>
+    <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
+    <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
+    <h2>TeamFight Tactics</h2>
+    <img src="https://i.blogs.es/b1b2bf/tft-para-moviles/450_1000.jpg" >
+    <h3>TFT es un juego de estrategia por turnos en el que te enfrentarás a siete oponentes en una competición por crear un poderoso equipo que peleará por ti. Tu objetivo: ser el último en quedar en pie.</h3>
+    <h2>VALORANT</h2>
+    <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
+    <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
+    <h2>VALORANT</h2>
+    <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
+    <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
+    <h2>VALORANT</h2>
+    <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
+    <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
+
 </body>
 </html>
