--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>TFT es un juego de estrategia por turnos en el que te enfrentarás a siete oponentes en una competición por crear un poderoso equipo que peleará por ti. Tu objetivo: ser el último en quedar en pie.</h3>
     <h2>MINECRAFT</h2>
     <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2017/02/guia-todos-trucos-consejos-minecraft.jpg?tf=3840x" >
-    <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
+    <h3>Minecraft es un videojuego de construcción de tipo «mundo abierto» o en inglés sandbox creado originalmente por el sueco Markus Persson, que creó posteriormente Mojang Studios</h3>
     <h2>VALORANT</h2>
     <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
     <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
