--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h3>Minecraft es un videojuego de construcción de tipo «mundo abierto» o en inglés sandbox creado originalmente por el sueco Markus Persson, que creó posteriormente Mojang Studios</h3>
     <h2>League of Legends</h2>
     <img src="https://i.ytimg.com/vi/KpxjwIaW0EM/hqdefault.jpg" >
-    <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
+    <h3>League of Legends es un videojuego multijugador de arena de batalla en línea desarrollado y publicado por Riot Games. Inspirándose en Defense of the Ancients, un mapa personalizado para Warcraft III, los fundadores de Riot buscaron desarrollar un juego independiente del mismo género.</h3>
     <h2>VALORANT</h2>
     <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
     <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
