--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <h2>League of Legends</h2>
     <img src="https://i.ytimg.com/vi/KpxjwIaW0EM/hqdefault.jpg" >
     <h3>League of Legends es un videojuego multijugador de arena de batalla en línea desarrollado y publicado por Riot Games. Inspirándose en Defense of the Ancients, un mapa personalizado para Warcraft III, los fundadores de Riot buscaron desarrollar un juego independiente del mismo género.</h3>
-    <h2>VALORANT</h2>
-    <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
-    <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
+    <h2>CS2</h2>
+    <img src="https://cdn.akamai.steamstatic.com/apps/csgo/images/csgo_react/social/cs2.jpg" >
+    <h3>Counter-Strike 2 es un videojuego de disparos táctico en primera persona multijugador de 2023 desarrollado y publicado por Valve. Es la quinta entrega principal de la serie Counter-Strike.</h3>
 
 </body>
 </html>
