--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>VALORANT</h2>
-    <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" >
+    <img src="https://www.lavanguardia.com/files/article_main_microformat/uploads/2020/05/26/5fa91b5913838.jpeg" width="600" height="400" >
     <h3>Valorant es un shooter táctico en primera persona de estilo hero shooter, desarrollado y publicado por Riot Games. El desarrollo del juego comenzó en 2014, y fue anunciado bajo el nombre en clave Project A en octubre de 2019.</h3>
     <h2>TeamFight Tactics</h2>
     <img src="https://i.blogs.es/b1b2bf/tft-para-moviles/450_1000.jpg" >
