--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2017/02/guia-todos-trucos-consejos-minecraft.jpg?tf=3840x" width="600" height="400">
     <h3>Minecraft es un videojuego de construcción de tipo «mundo abierto» o en inglés sandbox creado originalmente por el sueco Markus Persson, que creó posteriormente Mojang Studios</h3>
     <h2>League of Legends</h2>
-    <img src="https://i.ytimg.com/vi/KpxjwIaW0EM/hqdefault.jpg" >
+    <img src="https://i.ytimg.com/vi/KpxjwIaW0EM/hqdefault.jpg" width="600" height="400">
     <h3>League of Legends es un videojuego multijugador de arena de batalla en línea desarrollado y publicado por Riot Games. Inspirándose en Defense of the Ancients, un mapa personalizado para Warcraft III, los fundadores de Riot buscaron desarrollar un juego independiente del mismo género.</h3>
     <h2>CS2</h2>
-    <img src="https://cdn.akamai.steamstatic.com/apps/csgo/images/csgo_react/social/cs2.jpg" >
+    <img src="https://cdn.akamai.steamstatic.com/apps/csgo/images/csgo_react/social/cs2.jpg" width="600" height="400">
     <h3>Counter-Strike 2 es un videojuego de disparos táctico en primera persona multijugador de 2023 desarrollado y publicado por Valve. Es la quinta entrega principal de la serie Counter-Strike.</h3>
 
 </body>
